--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -8,7 +8,7 @@ body{
 }
 
 .fi-sidebar{
-    background-image: url("https://st.depositphotos.com/1027431/2471/v/450/depositphotos_24712251-stock-illustration-abstract-geometrical-background.jpg");
+    /*background-image: url("https://st.depositphotos.com/1027431/2471/v/450/depositphotos_24712251-stock-illustration-abstract-geometrical-background.jpg");*/
 }
 .fi-sidebar-item-button{
     color: white !important;
